resources/tests/invalid_syntax/var_decl.ct
//Error: (Expected an identifier!)|(An uninitialized variable should specify its type!)|(Expected a '.'!)
//4
fn hello()->void
{
  var fn = 10; //<- error
  var read += 11; // <- error
  var readb; // <- error
  {
    var readc = 11
  } // <- error
}